--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,13 +3,13 @@
     // Python Development
     "ms-python.python",
     "ms-python.vscode-pylance",
+    "charliermarsh.ruff",
     "ms-python.black-formatter",
     "ms-python.isort",
     "ms-python.flake8",
     "ms-python.pylint",
     "ms-python.pytest-adapter",
     "ms-python.debugpy",
-    
     // TypeScript/React Development
     "ms-vscode.vscode-typescript-next",
     "bradlc.vscode-tailwindcss",
@@ -18,44 +18,35 @@
     "formulahendry.auto-rename-tag",
     "christian-kohler.path-intellisense",
     "ms-vscode.vscode-eslint",
-    
     // General Development
     "ms-vscode.vscode-docker",
     "ms-azuretools.vscode-docker",
     "ms-vscode-remote.remote-containers",
     "ms-vscode-remote.remote-ssh",
     "ms-vscode-remote.remote-wsl",
-    
     // Git & Version Control
     "eamodio.gitlens",
     "mhutchie.git-graph",
-    
     // Database
     "ms-mssql.mssql",
     "cweijan.vscode-postgresql-client2",
-    
     // API Development
     "humao.rest-client",
     "ms-vscode.vscode-restructuredtext",
-    
     // Markdown & Documentation
     "yzhang.markdown-all-in-one",
     "shd101wyy.markdown-preview-enhanced",
-    
     // Themes & Icons
     "pkief.material-icon-theme",
     "zhuangtongfa.material-theme",
-    
     // Productivity
     "ms-vscode.vscode-json",
     "redhat.vscode-yaml",
     "ms-vscode.vscode-todo-highlight",
     "gruntfuggly.todo-tree",
-    
     // Testing
     "ms-vscode.test-adapter-converter",
     "hbenl.vscode-test-explorer",
-    
     // Code Quality
     "streetsidesoftware.code-spell-checker",
     "ms-vscode.vscode-json",
